apply plugin: 'com.android.application'

android {

    namespace 'com.wang.getapk'
    compileSdk 36

    buildFeatures {
        viewBinding true
    }

    defaultConfig {
        applicationId "com.rank.getapk"
        minSdk 23
        targetSdk 36
        versionCode 6
        versionName "1.0.6"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        vectorDrawables.useSupportLibrary = true
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }


    signingConfigs {
        release {
            keyAlias 'getapk'
            keyPassword 'getapk'
            storeFile file('key/getapk.jks')
            storePassword 'getapk'
        }
    }

    buildTypes {
        debug {
            minifyEnabled false
            zipAlignEnabled false
            shrinkResources false
        }
        release {
            minifyEnabled true
            zipAlignEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release

            applicationVariants.all { variant ->
                variant.outputs.all { output ->
                    def outputFile = output.outputFile
                    if (outputFile != null && outputFile.name.endsWith('.apk') && outputFile.name.contains("release")) {
                        outputFileName = "SeekPack_${defaultConfig.versionCode}_${defaultConfig.versionName}_release.apk"
                    } else {
                        outputFileName = "SeekPack_${defaultConfig.versionCode}_${defaultConfig.versionName}_debug.apk"
                    }
                }
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'

    implementation 'androidx.palette:palette:1.0.0'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
    // Because RxAndroid releases are few and far between, it is recommended you also
    // explicitly depend on RxJava's latest version for bug fixes and new features.
    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
    implementation('com.github.permissions-dispatcher:permissionsdispatcher:4.9.2') {
        // if you don't use android.app.Fragment you can exclude support for them
        exclude module: "support-v13"
    }
    annotationProcessor "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2"
    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
    implementation project(path: ':baseadapter')
}
